# libshamir

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac  libshamir.pc.in
include/: g256_tables.h  shamir.h
m4/: ax_random_device.m4
man/: shamir.7.in  shamir_get_keys.3.in  shamir_init_poly.3.in  shamir_poly_size.3.in  shamir_recover_secret.3.in
src/: shamir.c
tests/: test_shamir.c
